test/compile-errors/type-param-cant-have-type-args.nz
f void(a ?a nat)
	pass
